style.css
* {
    margin: 0;
}

html {
    position: relative;
    height: 100%;
}

body {
    height: 100%;
    background-color: black;
    font-family: 'Montserrat', sans-serif;
}



.wrapper {
    height: 100%;
    width: 100%;
    cursor: crosshair;
    background: url(backPS.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
    z-index: -3;
}

.wrapper::before {
    content: '';
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		background-image: linear-gradient(to bottom right,#151515,#000);
		opacity: .3; 
        z-index: -1;
       
  }


.container {
    position: absolute;
    top: 15%;
    left: 10%;
    float: left;
}


video {
  width: 100%    !important;
  height: auto   !important;
    z-index: 99;
}

.content {
    margin-top: 170px;
    margin-right: 2em;
    float: right;
    color: #fff;
    z-index: 99;
}

.header h1 {
    color: #fff;
    font-size: 5em;
    opacity: 1;
    letter-spacing: 10px;
    text-align: left;
}


.glitch {
  color: white;
  font-size: 100px;
  position: relative;
  width: 400px;
  margin: 0 auto;
}

@keyframes noise-anim {
  0% {
    clip: rect(62px, 9999px, 11px, 0);
  }
  5% {
    clip: rect(64px, 9999px, 84px, 0);
  }
  10% {
    clip: rect(50px, 9999px, 42px, 0);
  }
  15% {
    clip: rect(6px, 9999px, 23px, 0);
  }
  20% {
    clip: rect(15px, 9999px, 98px, 0);
  }
  25% {
    clip: rect(10px, 9999px, 89px, 0);
  }
  30% {
    clip: rect(46px, 9999px, 70px, 0);
  }
  35% {
    clip: rect(83px, 9999px, 61px, 0);
  }
  40% {
    clip: rect(12px, 9999px, 69px, 0);
  }
  45% {
    clip: rect(81px, 9999px, 12px, 0);
  }
  50% {
    clip: rect(92px, 9999px, 62px, 0);
  }
  55% {
    clip: rect(46px, 9999px, 41px, 0);
  }
  60% {
    clip: rect(77px, 9999px, 10px, 0);
  }
  65% {
    clip: rect(10px, 9999px, 93px, 0);
  }
  70% {
    clip: rect(69px, 9999px, 95px, 0);
  }
  75% {
    clip: rect(84px, 9999px, 21px, 0);
  }
  80% {
    clip: rect(89px, 9999px, 44px, 0);
  }
  85% {
    clip: rect(90px, 9999px, 9px, 0);
  }
  90% {
    clip: rect(93px, 9999px, 72px, 0);
  }
  95% {
    clip: rect(48px, 9999px, 48px, 0);
  }
  100% {
    clip: rect(3px, 9999px, 31px, 0);
  }
}
.glitch:after {
  content: attr(data-text);
  position: absolute;
  left: 2px;
  text-shadow: -1px 0 mediumpurple;
  top: 0;
  color: white;
  background: black;
  overflow: hidden;
  clip: rect(0, 900px, 0, 0);
  animation: noise-anim 2s infinite linear alternate-reverse;
}

@keyframes noise-anim-2 {
  0% {
    clip: rect(64px, 9999px, 86px, 0);
  }
  5% {
    clip: rect(23px, 9999px, 17px, 0);
  }
  10% {
    clip: rect(17px, 9999px, 90px, 0);
  }
  15% {
    clip: rect(47px, 9999px, 12px, 0);
  }
  20% {
    clip: rect(21px, 9999px, 6px, 0);
  }
  25% {
    clip: rect(9px, 9999px, 85px, 0);
  }
  30% {
    clip: rect(64px, 9999px, 34px, 0);
  }
  35% {
    clip: rect(26px, 9999px, 59px, 0);
  }
  40% {
    clip: rect(52px, 9999px, 10px, 0);
  }
  45% {
    clip: rect(3px, 9999px, 1px, 0);
  }
  50% {
    clip: rect(32px, 9999px, 91px, 0);
  }
  55% {
    clip: rect(52px, 9999px, 30px, 0);
  }
  60% {
    clip: rect(99px, 9999px, 50px, 0);
  }
  65% {
    clip: rect(4px, 9999px, 43px, 0);
  }
  70% {
    clip: rect(52px, 9999px, 98px, 0);
  }
  75% {
    clip: rect(5px, 9999px, 80px, 0);
  }
  80% {
    clip: rect(73px, 9999px, 11px, 0);
  }
  85% {
    clip: rect(99px, 9999px, 2px, 0);
  }
  90% {
    clip: rect(71px, 9999px, 72px, 0);
  }
  95% {
    clip: rect(63px, 9999px, 38px, 0);
  }
  100% {
    clip: rect(99px, 9999px, 88px, 0);
  }
}
.glitch:before {
  content: attr(data-text);
  position: absolute;
  left: -2px;
  text-shadow: 1px 0 #5E2D79;
  top: 0;
  color: white;
  background: black;
  overflow: hidden;
  clip: rect(0, 900px, 0, 0);
  animation: noise-anim-2 3s infinite linear alternate-reverse;
}

.content ul {
    padding: 0;
    list-style: none;
    text-align: left;
    padding-left: 5px;
    
}

.content ul li {
    margin-top: 2em;
    letter-spacing: 2px;
    font-weight: lighter;
    
}

.content ul li a {
    display: inline-block;
    text-decoration: none;
    color: white;
    border-bottom: 3px solid transparent;    
    width: 0px;
    transition: 1s ease;
    white-space: nowrap;
    height: 20px;
}

.content ul li a:hover {
    color: mediumpurple;
    border-bottom: 3px solid mediumpurple;
}

.content ul li #facebookLink:hover {
    width: 95px;
}

.content ul li #soundcloudLink:hover {
    width: 115px;
}

.cube:hover {
    cursor: move;
}

.cube div .side {
    height: 100%;
    width: 100%;
}

.cube > div {
    background-color: black;
}

@keyframes spinCube {   
 0% {
     transform: translateZ( 0px ) rotateX( 0deg ) rotateY( 0deg );
 }
 100% {
     transform: translateZ( 0px ) rotateX( 360deg ) rotateY( 360deg );
 }
 }

.spinning {
    -webkit-animation: spinCube 18s infinite ease-in-out;
    -moz-animation: spinCube 18s infinite ease-in-out;
    -o-animation: spinCube 18s infinite ease-in-out;
    animation: spinCube 18s infinite ease-in-out;
}

footer {
    min-height: 100%;
    margin: 0;
}

footer #widget {
    height: 100px;
}

#widget iframe {
    
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 100px;
    overflow: hidden;
    opacity: .8;
}

#widget div div div div div .visualAudible__footer .g-transition-transform {
    background-color: black !important;
}

/* MEDIA QUERIES */

@media only screen and (max-width: 980px) {
    
    .content {
        
    }   
}

@media only screen and (max-width: 1020px) {
      .cube {
        height: 300px;
        width: 300px;
    }
    
    .cube > div {
        height: 300px;
        width: 300px;
    }
    
    .cube > div:first-child  {
    -webkit-transform: rotateX(90deg) translateZ(160px);
    -moz-transform: rotateX(90deg) translateZ(160px);
    transform: rotateX(90deg) translateZ(160px);
}

.cube > div:nth-child(2) {
    -webkit-transform: translateZ(160px);
    -moz-transform: translateZ(160px);
    transform: translateZ(160px);
}

.cube > div:nth-child(3) {
    -webkit-transform: rotateY(90deg) translateZ(160px);
    -moz-transform: rotateY(90deg) translateZ(160px);
    transform: rotateY(90deg) translateZ(160px);
    text-align: center;
}

.cube > div:nth-child(4) {
    -webkit-transform: rotateY(180deg) translateZ(160px);
    -moz-transform: rotateY(180deg) translateZ(160px);
    transform: rotateY(180deg) translateZ(160px);
}

.cube > div:nth-child(5) {
    -webkit-transform: rotateY(-90deg) translateZ(160px);
    -moz-transform: rotateY(-90deg) translateZ(160px);
    transform: rotateY(-90deg) translateZ(160px);
}


.cube > div:nth-child(6) {
    -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(160px);
    -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(160px);
    transform: rotateX(-90deg) rotate(180deg) translateZ(160px);
}


}


@media only screen and (max-width: 890px) {
    
    .container {
        top: 35%;
        left: 10%;
    }
    
    .content {
        margin-top: 66.6px;
    }
    
    .cube {
        height: 200px;
        width: 200px;
    }
    
    .cube > div {
        height: 200px;
        width: 200px;
    }
    
    .cube > div:first-child  {
    -webkit-transform: rotateX(90deg) translateZ(110px);
    -moz-transform: rotateX(90deg) translateZ(110px);
    transform: rotateX(90deg) translateZ(110px);
}

.cube > div:nth-child(2) {
    -webkit-transform: translateZ(110px);
    -moz-transform: translateZ(110px);
    transform: translateZ(110px);
}

.cube > div:nth-child(3) {
    -webkit-transform: rotateY(90deg) translateZ(110px);
    -moz-transform: rotateY(90deg) translateZ(110px);
    transform: rotateY(90deg) translateZ(110px);
    text-align: center;
}

.cube > div:nth-child(4) {
    -webkit-transform: rotateY(180deg) translateZ(110px);
    -moz-transform: rotateY(180deg) translateZ(110px);
    transform: rotateY(180deg) translateZ(110px);
}

.cube > div:nth-child(5) {
    -webkit-transform: rotateY(-90deg) translateZ(110px);
    -moz-transform: rotateY(-90deg) translateZ(110px);
    transform: rotateY(-90deg) translateZ(110px);
}


.cube > div:nth-child(6) {
    -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(110px);
    -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(110px);
    transform: rotateX(-90deg) rotate(180deg) translateZ(110px);
}


}

@media only screen and (max-width: 667px) {
    
    
    .content h1 {
        font-size: 
}

